# TDengine

src/client/: CMakeLists.txt
src/client/src/: tscSQLParser.c  tscServer.c  tscSubquery.c  tscSystem.c  tscUtil.c
src/kit/shell/: CMakeLists.txt
src/kit/shell/src/: shellEngine.c  shellLinux.c
src/kit/taosdemo/: CMakeLists.txt  taosdemo.c
src/kit/taosdump/: CMakeLists.txt  taosdump.c
src/modules/http/: CMakeLists.txt
src/modules/monitor/: CMakeLists.txt
src/os/darwin/src/: tdarwin.c
src/os/linux/src/: tlinux.c  tsystem.c
src/os/windows/src/: twindows.c
src/system/detail/: CMakeLists.txt
src/system/detail/src/: dnodeService.c  dnodeSystem.c  mgmtSystem.c
src/system/lite/: CMakeLists.txt
src/system/lite/src/: mgmtAcct.spec.c
src/util/src/: tglobalcfg.c  version.c
